Docker image trimming
Don't include unnecessary directories in image

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,5 +5,10 @@ Dockerfile
 docker.properties
 develop/
 docs/
+testspace/
 tmp/
 README*
+
+# TODO not needed in this branch, but used in develop branch
+tests/
+lib/iati-rulesets/
