--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,3 +1,4 @@
 source 'https://rubygems.org'
 gem 'github-pages', group: :jekyll_plugins
 gem 'dataworkbench-jekyll-theme'
+gem 'jekyll-octicons' # https://octicons.github.com/
