Add --no-cache to docker build

--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,7 @@
     
     <exec executable="docker">
       <arg value="build"/>
+      <arg value="--no-cache"/>
       <arg value="-t"/>
       <arg value="${img}:latest"/>
       <arg value="."/>
