--- a/helpers/build.xml
+++ b/helpers/build.xml
@@ -40,7 +40,7 @@
 
     <echo>
       Ant target graph available as tmp/ant-graph.dot
-      To create an SVG image fromt this, you need GraphViz and run:
+      To create and view an SVG image fromt this, you need GraphViz and run:
       
         dot -Tsvg -o tmp/ant-graph.svg tmp/ant-graph.dot
         open tmp/ant-graph.svg
