Xspec + build fixes
Use local tmp directory for intermediate files
Include helpers is already done via buid-engine
Update rules with fixes
Use cache for docker build

--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
     
     <exec executable="docker">
       <arg value="build"/>
-      <arg value="--no-cache"/>
+<!--      <arg value="-\-no-cache"/>-->
       <arg value="-t"/>
       <arg value="${img}:latest"/>
       <arg value="."/>
@@ -61,6 +61,5 @@
     </exec>
   </target>
   
-  <import file="helpers/build.xml" />
   <import file="build-engine.xml" />
 </project>
